# redirect

./: Cargo.toml
examples/: initialize.rs  triangle.rs
src/: comptr.rs  device.rs  event.rs  factory.rs  fence.rs  format.rs  lib.rs  swapchain.rs
src/command/: queue.rs
src/command/list/: bundle.rs  common.rs  direct.rs  mod.rs
src/descriptor/: heap.rs
src/descriptor/desc/: dsv.rs  mod.rs  rtv.rs  srv.rs  uav.rs
src/error/: mod.rs
src/pipeline/: ia.rs  mod.rs  rootsig.rs  so.rs
src/resource/: barrier.rs  description.rs  mod.rs  raw.rs  texture.rs  traits.rs  usage.rs
src/resource/heap/: description.rs  raw.rs
src/shader/: mod.rs
