[package]
name = "redirect"
version = "0.3.0"
authors = ["Luxko <luxko@qq.com>"]
license = "Apache-2.0"
keywords = ["graphics"]
categories = ["rendering::graphics-api"]
documentation = "https://daseinphaos.github.io/doc/redirect/"
repository = "https://github.com/daseinphaos/redirect"
description = "A light weight, type safe wrapper around the DirectX12 API"

[dependencies]
bitflags = "1.0"
smallvec = "0.4"

[[example]]
name = "initialize"
path = "examples/initialize.rs"

[[example]]
name = "triangle"
path = "examples/triangle.rs"

[dev-dependencies]
winit = "0.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "winbase", "dxgi", "dxgi1_4", "d3dcommon", "d3d12", "d3dcompiler", "unknwnbase", "errhandlingapi" ,"synchapi", "handleapi", "winerror"] }